--- a/login.html
+++ b/login.html
@@ -22,8 +22,10 @@
               class="form-control"
               type="text"
               placeholder="Enter Email"
+              id="email"
               required
             />
+            <label id="invalid_email" class="validation">You entered an invalid email</label>
           </div>
           <div class="field">
             <label for="password" class="form-label">Password:</label>
@@ -37,7 +39,7 @@
             <label for="email" class="validation-label"></label>
           </div>
           <div class="field">
-            <button class="button" style="margin-left: 40%">LOGIN</button>
+            <button class="button" type="button" onclick="submit_form()" style="margin-left: 40%">LOGIN</button>
           </div>
           <div class="field">
             <p style="color: white; font-size: 15px">
@@ -66,5 +68,31 @@
         </div>
       </div>
     </div>
+    <script>
+      function validate_email(email){
+      var email_pattern = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+      return String(email).search(email_pattern) != -1;
+    }
+    function submit_form()
+    {
+      email = document.getElementById("email");
+      email_valid = validate_email(email.value);
+      if(!email_valid)
+      {
+        document.getElementById("invalid_email").style.display="block";
+        setTimeout(function(){
+          document.getElementById("invalid_email").style.display="none";
+        },2000); 
+      }
+      if(email_valid)
+      {
+        document.getElementById("login-form").submit();
+      }
+      else
+      {
+        return false;
+      }
+    }
+    </script>
   </body>
 </html>
