--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
         <div id="form-head">
           <h1>REGISTER</h1>
         </div>
-        <form id="login-form">
+        <form id="register-form" method="POST" action="./index.html">
           <div class="field">
             <label for="email" class="form-label">Email:</label>
             <input
@@ -34,8 +34,10 @@
               class="form-control"
               type="text"
               placeholder="Enter Email"
+              id="email"
               required
             />
+            <label id="invalid_email" class="validation">You entered an invalid email</label>
           </div>
           <div class="field">
             <label for="password" class="form-label">Password:</label>
@@ -44,6 +46,7 @@
               class="form-control"
               type="password"
               placeholder="Enter Password"
+              id="pass1"
               required
             />
           </div>
@@ -53,13 +56,14 @@
               name="re-enter-password"
               class="form-control"
               type="password"
+              id="pass2"
               placeholder="Re-enter Password"
               required
             />
-            <label for="email" class="validation-label"></label>
           </div>
+          <label id="mismatch_password" class="validation">You entered two different passwords</label>
           <div class="field">
-            <button class="button" style="margin-left: 40%;">REGISTER</button>
+            <button class="button" type="button" onclick="submit_form()" style="margin-left: 40%;">REGISTER</button>
           </div>
           <div class="field">
             <p style="color: white; font-size: 15px">
@@ -77,4 +81,50 @@
       </div>
     </div>
   </body>
+  <script>
+
+    function validate_email(email){
+      var email_pattern = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+      return String(email).search(email_pattern) != -1;
+    }
+    function check_match(pass1, pass2){
+      return pass1 == pass2;
+    }
+
+    function submit_form()
+    {
+      email = document.getElementById("email");
+      pass1 = document.getElementById("pass1");
+      pass2 = document.getElementById("pass2");
+
+      email_valid = validate_email(email.value);
+      pass_match = check_match(pass1.value, pass2.value);
+
+
+      if(!email_valid)
+      {
+        document.getElementById("invalid_email").style.display="block";
+        setTimeout(function(){
+          document.getElementById("invalid_email").style.display="none";
+        },2000); 
+      }
+
+      if(!pass_match)
+      {
+        document.getElementById("mismatch_password").style.display="block";
+        setTimeout(function(){
+          document.getElementById("mismatch_password").style.display="none";
+        },2000); 
+      }
+
+      if(email_valid && pass_match)
+      {
+        document.getElementById("register-form").submit();
+      }
+      else
+      {
+        return false;
+      }
+    }
+  </script>
 </html>
